# HelmetDetection

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: main.py
src/models/: yolo_detector.py
src/viewmodels/: main_viewmodel.py
src/views/: main_window.py
src/views/components/: video_widget.py
