[project]
name = "yolo-helmet-det"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0", 
    "PyQt6>=6.4.0",
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "ultralytics>=8.0.0"
]
